@@ -19,4 +19,8 @@ class TestResolvResource < Test::Unit::TestCase
     bug10857 = '[ruby-core:68128] [Bug #10857]'
     assert_equal(@name1.hash, @name2.hash, bug10857)
   end
+
+  def test_coord
+    Resolv::LOC::Coord.create('1 2 1.1 N')
+  end
 end
