@@ -1,3 +1,9 @@
+Sun Nov  6 00:06:38 2016  Tanaka Akira  <akr@fsij.org>
+
+	* lib/resolv.rb (Resolv::LOC::Coord.create): fixed.
+	  [ruby-core:72567] [Bug #11912] fixed by Eric Wong and Kazuhiro
+	  NISHIYAMA.
+
 Sun Nov  6 00:03:09 2016  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* configure.in (-Wimplicit-fallthrough): gcc7 introduces case
